# Localization

./: .gitignore  README.md  RF-analysis.ipynb  conv_emergence.py  environment-cpu.yml  environment-gpu.yml  hackathon-ising.py  initial_weights.npz  jax_stats  new_task.ipynb  nlgp_jax_stats  non-Gaussian-RFs.ipynb  sandbox.ipynb  send_to_hpc.sh  setup.cfg  sweep.ipynb  test_bernoulli_branching.py  test_svd.py  time.py  viz.ipynb  viz_box.py  viz_nlgp.ipynb  why_is_jax_slow.py
datasets/: __init__.py  base.py  nonlinear_gp.py  single_pulse.py
experiments/: __init__.py  batched_online.py  eigenvalues.py  gain_analysis.py  gain_sweep.py  nonlinear_gp.py  online_sgd.py  sign_flipping.py  single_pulse.py  weight_evolution.py
figures/: fig1.ipynb  fig2.ipynb  fig3.ipynb  fig3a.py  fig3b.py  fig4.ipynb  fig5.ipynb
leonl/: viz.ipynb
localization/: __init__.py  viz_box.py
models/: __init__.py  feedforward.py
notebooks/: 2d_dataset.ipynb  Tiling_Fig.ipynb  autoencoding.ipynb  center_surround.ipynb  dataset_viz.ipynb  debug.ipynb  edge_counting.ipynb  elliptical.ipynb  elliptical_data.ipynb  finite_dataset.ipynb  fourier.ipynb  gain_sweep.ipynb  gating_sp.ipynb  higher_moments.ipynb  ica.ipynb  ica_sklearn.ipynb  intermediate_g_conditionals.ipynb  ising.ipynb  marginal_adjust.ipynb  multiple_targets.ipynb  new_task.ipynb  norta.ipynb  ode_approximation.ipynb  ode_approximation_sweep.ipynb  ode_gaussian.ipynb  ode_pulse.ipynb  preactivation_dive.ipynb  relu_gain.ipynb  relu_hypercube.ipynb  relu_ode.ipynb  sandbox.ipynb  sigmoid_showcase.ipynb  sine_phase.ipynb  utils.py  (+5 more)
(+303 files in other folders)
