[metadata]
name = localization
version = attr: localization.__version__
author = Leon Lufkin
url = "https://github.com/leonlufkin/Localization"
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires =
    jupyter
    ipdb
    ipython

    pandas>=2.0
    matplotlib
    numpy
    seaborn
    tqdm

[options.packages.find]
include = localization*
